//! Worker client for communication from coordinator to workers

use chatloop_common::error::{ChatLoopError, Result};
use tonic::transport::Channel;

/// Worker client wrapper
///
/// This provides a simplified interface to the worker gRPC service.
#[derive(Clone)]
pub struct WorkerClient {
    // In production, would use the actual generated gRPC client
    // For now, this is a placeholder
    endpoint: String,
}

impl WorkerClient {
    /// Connect to a worker endpoint
    pub async fn connect(endpoint: &str) -> Result<Self> {
        // In production, would use actual tonic::transport::Endpoint::connect
        Ok(Self {
            endpoint: endpoint.to_string(),
        })
    }

    /// Perform health check
    pub async fn health_check(&self) -> Result<bool> {
        // In production, would call actual gRPC health check
        Ok(true)
    }

    /// Forward request to worker
    pub async fn forward(&self, _request: Vec<f32>) -> Result<Vec<f32>> {
        // In production, would call actual forward pass
        Ok(vec![])
    }

    /// Get worker metrics
    pub async fn get_metrics(&self) -> Result<WorkerMetrics> {
        Ok(WorkerMetrics {
            queue_depth: 0,
            cpu_utilization: 0.5,
            memory_used_bytes: 1024 * 1024 * 1024,
        })
    }
}

/// Worker metrics
#[derive(Debug, Clone)]
pub struct WorkerMetrics {
    pub queue_depth: usize,
    pub cpu_utilization: f64,
    pub memory_used_bytes: usize,
}
